--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: Parkinsans, serif;
-    transition: ease-out .3s;
+    transition: ease-in-out .15s;
   }
 
   li {
@@ -123,7 +123,7 @@
   .submit-btn {
     background-color: rgb(58, 134, 105);
     border-style: none;
-    border-radius: 25px;
+    border-radius: 15px;
     font-size: small;
     padding-top: 3%;
     padding-bottom: 3%;
@@ -131,6 +131,19 @@
     padding-right: 6%;
     margin-top: 3%;
     color: white;
+  }
+  .reset-btn {
+    color: rgb(58, 134, 105);
+    border-style: solid;
+    border-color: #2e7d5a;
+    border-radius: 15px;
+    font-size: small;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
+    margin-top: 3%;
+     background-color:white;
   }
 
   .fb-inputs,
