--- a/style.css
+++ b/style.css
@@ -226,7 +226,9 @@
       display: flex;
       flex-direction: column-reverse;
       justify-content: center;
-      align-items: start;
+      align-items: center;
+        padding=0%;
+        margin=0%;
 
     }
 
