--- a/style.css
+++ b/style.css
@@ -226,9 +226,7 @@
       display: flex;
       flex-direction: column-reverse;
       justify-content: center;
-      align-items: center;
-        padding=0%;
-        margin=0%;
+      align-items: start;
 
     }
 
